Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24560

[REG 4.12 -> 4.13] Parsing QTest output in Application Output broken

XMLWordPrintable

    • Linux/X11, Windows
    • 215b28466682ae3d0f1a2ef26d7972ac8b63d7ab (qt-creator/qt-creator/4.13) c9a956c9895e5e69ff007829f8b526f8d283a05c (qt-creator/qt-creator/4.14)

      The following QTest Application Output no longer generates links to the file and containing with the error:

      17:01:56: Starting /home/user/src/build-QTestTest-Desktop_Qt_5_14_1_GCC_64bit-Debug/QTestTest ...
      ********* Start testing of test *********
      Config: Using QtTest library 5.14.1, Qt 5.14.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 5.3.1 20160406 (Red Hat 5.3.1-6))
      PASS   : test::initTestCase()
      FAIL!  : test::test_case1() Does not work
         Loc: [../QTestTest/tst_test.cpp(14)]
      PASS   : test::cleanupTestCase()
      Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 0ms
      ********* Finished testing of test *********
      17:01:57: /home/user/src/build-QTestTest-Desktop_Qt_5_14_1_GCC_64bit-Debug/QTestTest exited with code 1

      The Issues pane now contains the error, but it does not allow to jump to the file either ("file not found").

        1. screenshot-1.png
          screenshot-1.png
          217 kB
        2. issues-pane-file-not-found.png
          issues-pane-file-not-found.png
          115 kB
        3. QTestTest.tar.gz
          0.4 kB
        4. qtcreatorbug24560_proove.zip
          35 kB
        5. success.png
          success.png
          138 kB
        6. debug.png
          debug.png
          84 kB
        7. run.png
          run.png
          89 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            aha_1980 André Hartmann
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are 2 open Gerrit changes